2017-12-04  Kevin Ushey  <kevinushey@gmail.com>

        * inst/include/Rcpp/RObject.h: Protect temporary wrapped SEXPs
        * inst/include/Rcpp/api/meat/DataFrame.h: Idem
        * inst/include/Rcpp/api/meat/Environment.h: Idem
        * inst/include/Rcpp/api/meat/proxy.h: Idem
        * inst/include/Rcpp/proxy/ProtectedProxy.h: Idem
        * inst/include/Rcpp/vector/generic_proxy.h: Idem

2017-12-03  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New minor version

        * inst/include/Rcpp/sugar/functions/is_na.h: Correct test for NA to work
        with new as well as old Date(time)Vectors

        * inst/unitTests/cpp/dates.cpp (has_na): Added tests
        * inst/unitTests/runit.Date.R (test.NA): Idem

2017-11-30  James J Balamuta  <balamut2@illinois.edu>

        * src/attributes.cpp: Fixed missing Rcpp namespace in export interface
        generation

2017-11-25  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version

        * inst/include/Rcpp/exceptions/cpp11/exceptions.h: Ensure Rf_format gets
        a format string
        * inst/include/Rcpp/exceptions/cpp98/exceptions.h (Rcpp): Ditto

2017-11-18  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version

        * vignettes/Rcpp-FAQ.Rmd: Use Rcpp::Rcpp.plugin.maker(), not ':::'

2017-11-17  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.12.14
        * inst/NEWS.Rd: Release 0.12.14
        * inst/bib/Rcpp.bib: Release 0.12.14
        * vignettes/Rcpp.bib: Release 0.12.14
        * inst/include/Rcpp/config.h: Release 0.12.14

2017-11-04  Dirk Eddelbuettel  <edd@debian.org>

        * vignettes/Rcpp-FAQ.Rmd: Add 'skip_final_break: true' toggle
        * vignettes/Rcpp-attributes.Rmd: Idem
        * vignettes/Rcpp-extending.Rmd: Idem
        * vignettes/Rcpp-modules.Rmd: Idem
        * vignettes/Rcpp-sugar.Rmd: Idem

2017-10-30  Dirk Eddelbuettel  <edd@debian.org>
