@@ -23,10 +23,6 @@
 #ifndef Rcpp_Environment_h
 #define Rcpp_Environment_h
 
-// From 'R/Defn.h'
-// NOTE: can't include header directly as it checks for some C99 features
-extern "C" SEXP R_NewHashedEnv(SEXP, SEXP);
-
 namespace Rcpp{
 
     RCPP_API_CLASS(Environment_Impl),
@@ -405,21 +401,6 @@ namespace Rcpp{
     };
 
 typedef Environment_Impl<PreserveStorage> Environment ;
-
-inline Environment new_env(int size = 29) {
-    Shield<SEXP> sizeSEXP(Rf_ScalarInteger(size));
-    return R_NewHashedEnv(R_EmptyEnv, sizeSEXP);
-}
-
-inline Environment new_env(SEXP parent, int size = 29) {
-    Shield<SEXP> sizeSEXP(Rf_ScalarInteger(size));
-    Shield<SEXP> parentSEXP(parent);
-    if (!Rf_isEnvironment(parentSEXP)) {
-        stop("parent is not an environment");
-    }
-    return R_NewHashedEnv(parentSEXP, sizeSEXP);
-}
-
 
 } // namespace Rcpp
 
